--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,10 @@
 {
   "semi": true,
   "tabWidth": 2,
-  "printWidth": 100,
+  "printWidth": 80,
   "singleQuote": true,
   "trailingComma": "all",
   "jsxSingleQuote": true,
+  "arrowParens": "avoid",
   "bracketSpacing": true
 }
