--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-react": "^7.33.1",
+    "happy-dom": "^10.8.0",
     "husky": "^8.0.0",
     "postcss": "^8.4.27",
     "prettier": "^3.0.0",
